force-app/main/default/objects/sked__Schedule_Template__c/sked__Schedule_Template__c.object-meta.xml
<CustomObject>
    <label>Schedule Template</label>
    <nameField>
        <label>Schedule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>