force-app/main/default/objects/sked__Schedule_Template__c/fields/sked__Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>sked__Deleted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deleted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Schedule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>