force-app/main/default/objects/sked__Schedule_Template__c/fields/sked__Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>sked__Deleted_Date__c</fullName>
    <label>Deleted Date</label>
    <type>DateTime</type>
</CustomField>