force-app/main/default/objects/sked__Schedule_Template__c/fields/sked__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>