force-app/main/default/objects/sked__Schedule_Template__c/fields/sked__Period_Days__c.field-meta.xml
<CustomField>
    <fullName>sked__Period_Days__c</fullName>
    <label>Period Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>