force-app/main/default/objects/sked__Schedule_Template__c/validationRules/sked__PeriodDaysPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__PeriodDaysPositive</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNULL(sked__Period_Days__c)), sked__Period_Days__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>sked__Period_Days__c</errorDisplayField>
    <errorMessage>If Period Days is set it must be positive.</errorMessage>
</ValidationRule>